--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
         titulo: "TRANSFERENCIA DE CALOR",
         url: "https://hexezs.github.io/TRANSFERENCIA-DE-CALOR/",
       },
+      {
+        titulo: "Laboratorio de Termodinámica",
+        url: "https://hexezs.github.io/Laboratorio-de-Termodin-mica/",
+      },
       // Agrega más objetos aquí siguiendo el mismo formato
       // { titulo: "Nombre del programa", url: "https://…" },
     ];
